Fix - Spacing issue on multi select

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -5178,7 +5178,6 @@ img.ui-datepicker-trigger {
  * Select2 elements.
  */
 .select2-container {
-	width: 100%;
 
 	.select2-selection--multiple {
 		.select2-selection__rendered {
@@ -5256,8 +5255,12 @@ img.ui-datepicker-trigger {
 		bottom: -1px;
 	}
 }
+.select2-container--open{
+	.select2-dropdown--below{
+		margin-top: -15px;
+	}
+}
 .select2-container {
-
 	@media only screen and (max-width: 782px) {
 		font-size: 16px;
 	}
